--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,17 @@
 
- 
-			
+fix mode switching :
+	scene button and other buttons not updating
+	double updating/flashing when swiching to dev and step seq
+	not restoring mode correctly when leaving fader base session modes.
+
+implict arm:
+	fix implictic arming/disabling. 
+	fix incompatiblity with launchpad95 on track change + implicit arm
+	track feed back not disabled sometime on mode switch.
+	
+	
 instrument mode:
-	fix scene buttons
-	quickscale
+	implement quickscale
 	
 	functions :
 		quantize one note ?
@@ -20,10 +28,13 @@ session :
 	fix duplicate clip not working
 
 step seq2
-	matrix not updating
-	buttons not updating
+	wrong quantize on mode change/startup
+	wong scale/octave on first start
+	quick scale ? 
+	
 	
 step seq1
+	on first run the bottom lanes still trigger note clip stuff...
 	fix bug with ghost scale component
 	fix bug with init ghost (force)
 	fix bug with create clip
@@ -34,6 +45,10 @@ step seq1
 	drumrack mode
 		use drum component in drum mode. => use separated drum component, so that it works with lock mode.
 		
+session :
+	record quantize ? 
+	launch quantize
+	select quantise value with scenes ??
 	
 scene buttons :
 	#step1		#step2		#instru		#device			
@@ -45,14 +60,7 @@ scene buttons :
 	mute		len			mute		lock2
 	mode		rand		stop		lock3
 	lock		lock		play		lock4
-		
-device controller:
 
-
-session :
-	record quantize ? 
-	launchquantize
-	select quantise value with scenes ??
 
 
 DONE
